--- a/wiki/BuildAndInstallation.wiki
+++ b/wiki/BuildAndInstallation.wiki
@@ -88,7 +88,7 @@ And if you download the pre-built jar, you execute it with this command
 java -jar sitebridgeclient-1.0-jar-with-dependencies.jar "http://<your-sitebridge-server-url>"
 }}}
 
-Wait a little bit, and you should be seeing output like this. This means you are done setting up everything.
+Wait a little bit, and you should be seeing output like this. And if you indeed see it, this means you are done setting up everything. *Make sure to press Ctrl-C to stop the program. Do not leave it running otherwise you will be spending your free daily quota unnecessarily.*
 
 {{{
 0    [pool-1-thread-1] INFO  com.eddy.sitebridgeclient.Controller  - Kick off server #0
