--- a/wiki/AllAboutSiteBridge.wiki
+++ b/wiki/AllAboutSiteBridge.wiki
@@ -8,7 +8,7 @@ Welcome to !SiteBridge! !SiteBridge allows you to bridge a Google App Engine (GA
 
 = Why Bother? =
 
-!SiteBridge was initially and purposely created to remove the pain of its author, Ed Tretriluxana, that'd been irritating him when developing web-based and server-backed mobile applications. Why? His development environment is behind a firewall, a usual setup for almost all enterprise development. He very often needs to test/troubleshoot the apps on these mobile devices. Unfortunately these devices do not and cannot see his development or internal sites because they are not on the same network. For security reason, the company doesn't provide any WIFI network either. So the possibility of these devices can getting on the same network in order to be able to see his server-side systems is gone. Thus, all he'd been ending up doing in the past was to use simulators or browser plugins to imitate these devices. However, they are and never will be the same. He wants to temporarily make the site accessible to devices.
+!SiteBridge was initially and purposely created to remove the pain of its author, Ed Tretriluxana, that'd been irritating him when developing web-based and server-backed mobile applications. Why? His development environment is behind a firewall, a usual setup for almost all enterprise development. He very often needs to test/troubleshoot the apps on these mobile devices. Unfortunately these devices do not and cannot see his development or internal sites because they are not on the same network. For security reason, the company doesn't provide any WIFI network either. So the possibility of these devices can get on the same network in order to be able to see his server-side systems is gone. Thus, all he'd been ending up doing in the past was to use simulators or browser plugins to imitate these devices. However, they are and never will be the same. He wants to temporarily make the site accessible to devices.
 
 = What Can I Do With It? =
 
